# senryu-detector

./: CLAUDE.md
detector/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README-DOCKER.md  README.md  analyze.py  api_usage_example.py  cloud-run-deploy.sh  cloudbuild.yaml  main.py  mypy.ini  pyproject.toml  repl.py  test_api_changes.py
detector/.github/workflows/: ci.yml
detector/src/detector/: __init__.py  api.py  main.py  server.py
detector/src/detector/core/: __init__.py  detector.py  mora.py  patterns.py
detector/src/detector/core/filters/: __init__.py  base.py  chain.py  japanese.py  punctuation.py  sokuon.py  unknown_word.py
detector/src/detector/core/splitters/: __init__.py  base.py  mora_based.py  pos_aware.py  scorer.py
detector/src/detector/models/: __init__.py  api.py  senryu.py
detector/src/detector/tokenizer/: __init__.py  sudachi.py
detector/tests/: __init__.py  test_integration.py  test_main.py  test_models.py  test_mora.py  test_patterns.py  test_punctuation_handling.py  test_sokuon_filter.py
docs/: CNAME  index.html
docs/assets/: index-2CNlzFQW.js  index-45Tv10GG.js  index-BcI1F15L.js  index-CJdIZbdB.js  index-CrlQOcTj.css  index-kBjXujRv.css
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/components/: InputArea.test.tsx  InputArea.tsx  SenryuDetector.tsx  SenryuDisplay.test.tsx  SenryuDisplay.tsx
frontend/src/hooks/: useSenryuAPI.test.ts  useSenryuAPI.ts
frontend/src/types/: api.ts
tmp/docs/: deployment-fixes.md
